--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
 <h1>HELLO WORLD!!</h1>
+<a href="signup.php">SIGNUP</a>
+<a href="login.php">LOGIN</a>
 <br><br>
 <h1>HOMEPAGE</h1>
 </body>
