adding try.php in index

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <h1>HELLO WORLD!!</h1>
 <a href="signup.php">SIGNUP</a>
 <a href="login.php">LOGIN</a>
+<a href="try.php">TRY</a>
 <br><br>
 <h1>HOMEPAGE</h1>
 </body>
