--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <h1>HELLO WORLD!!</h1>
 <a href="signup.php">SIGNUP</a>
 <a href="login.php">LOGIN</a>
-<a href="try.php">TRY</a>
+<a href="/MaverickFinancing.github.io/try.php">TRY</a>
+<br><br>
+<a href="/MaverickFinancing.github.io/try1.php">TRY1 PAGE</a>
 <br><br>
 <h1>HOMEPAGE</h1>
 </body>
