--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <a href="login.php">LOGIN</a>
 <a href="/MaverickFinancing.github.io/try.php">TRY</a>
 <br><br>
-<a href="/MaverickFinancing.github.io/try1.php">TRY1 PAGE</a>
+<a href="/MaverickFinancing.github.io/try1.html">TRY1 PAGE</a>
 <br><br>
 <h1>HOMEPAGE</h1>
 </body>
