--- a/try1.html
+++ b/try1.html
@@ -21,7 +21,7 @@
     <button onclick="myFunction()">Try it</button>
     <h2 id="demo"></h2>
 
-    <script type="text/javascript" src="personData.json"></script> 
+    <!-- <script type="text/javascript" src="personData.json"></script>  -->
 <script>
     function myFunction2() {
         var inputUserId = document.getElementById("inputUserId").value;
