minor change at index

--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
             document.getElementById('login').style.display = 'none';
             document.getElementById('demo').style.display = 'none';
             // window.location.replace('/MaverickFinancing.github.io/try1.html');
-            document.getElementById("invested").innerHTML = "YOU INVESTED :"+txt;
-            document.getElementById("profit").innerHTML = "YOUR PROFIT :"+txt;
+            document.getElementById("invested").innerHTML = "YOU INVESTED : "+txt;
+            document.getElementById("profit").innerHTML = "YOUR PROFIT : 0";
           }
 				} else{
 					document.getElementById("demo").innerHTML = "sorry! ERROR";
